--- a/languages/bp-group-sites.pot
+++ b/languages/bp-group-sites.pot
@@ -1,14 +1,14 @@
-# Copyright (C) 2016 BP Group Sites
+# Copyright (C) 2017 BP Group Sites
 # This file is distributed under the same license as the BP Group Sites package.
 msgid ""
 msgstr ""
-"Project-Id-Version: BP Group Sites 0.2.3\n"
+"Project-Id-Version: BP Group Sites 0.2.4\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/bp-group-sites\n"
-"POT-Creation-Date: 2016-06-21 14:16:45+00:00\n"
+"POT-Creation-Date: 2017-02-09 14:00:53+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2016-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2017-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 
@@ -440,7 +440,7 @@ msgid "https://github.com/christianwach/bp-group-sites"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "In WordPress Multisite, create a many-to-many replationship between BuddyPress Groups and WordPress Sites."
+msgid "Creates many-to-many relationships between BuddyPress Groups and WordPress Sites."
 msgstr ""
 
 #. Author of the plugin/theme
