--- a/languages/bp-group-sites.pot
+++ b/languages/bp-group-sites.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: BP Group Sites 0.2.5\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/bp-group-sites\n"
-"POT-Creation-Date: 2017-07-13 13:19:26+00:00\n"
+"POT-Creation-Date: 2017-07-13 13:30:28+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -86,7 +86,7 @@ msgid "post"
 msgstr ""
 
 #: includes/bpgsites-activity.php:440
-msgid "%s left a %s on a %s %s in the group %s:"
+msgid "%1$s left a %2$s on a %3$s %4$s in the group %5$s:"
 msgstr ""
 
 #: includes/bpgsites-activity.php:442
@@ -201,11 +201,11 @@ msgid " &amp; "
 msgstr ""
 
 #: includes/bpgsites-activity.php:2572
-msgid "%s updated a %s %s in the group %s:"
+msgid "%1$s updated a %2$s %3$s in the group %4$s:"
 msgstr ""
 
 #: includes/bpgsites-activity.php:2583
-msgid "%s wrote a new %s %s in the group %s:"
+msgid "%1$s wrote a new %2$s %3$s in the group %4$s:"
 msgstr ""
 
 #: includes/bpgsites-activity.php:2624
