--- a/languages/bp-group-sites.pot
+++ b/languages/bp-group-sites.pot
@@ -1,470 +1,360 @@
-# Copyright (C) 2020 BP Group Sites
-# This file is distributed under the same license as the BP Group Sites package.
+# Copyright (C) 2022 Christian Wach
+# This file is distributed under the same license as the BP Group Sites plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: BP Group Sites 0.3\n"
+"Project-Id-Version: BP Group Sites 0.3.1\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/bp-group-sites\n"
-"POT-Creation-Date: 2020-12-01 17:02:42+00:00\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2020-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2022-09-16T11:57:54+00:00\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"X-Generator: WP-CLI 2.6.0\n"
+"X-Domain: bp-group-sites\n"
 
-#: assets/templates/bpgsites/bpgsites-loop.php:127
-#: assets/templates/twentysixteen/bpgsites-loop.php:127
-#: includes/bpgsites-groups.php:634 includes/bpgsites-groups.php:747
-msgid "Sorry, there were no sites found."
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:27
-#: assets/templates/twentysixteen/index.php:26
-msgid "%s Directory"
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:28
-#: assets/templates/bpgsites/index.php:48
-#: assets/templates/twentysixteen/index.php:27
-#: assets/templates/twentysixteen/index.php:56
-#: includes/bp-bpgsites-component.php:42 includes/bp-bpgsites-component.php:96
-#: includes/bp-bpgsites-screens.php:112 includes/bpgsites-activity.php:619
-#: includes/bpgsites-activity.php:2408 includes/bpgsites-activity.php:2419
-#: includes/bpgsites-activity.php:2462 includes/bpgsites-admin.php:613
-#: includes/bpgsites-admin.php:619 includes/bpgsites-groups.php:75
-#: includes/bpgsites-groups.php:504 includes/bpgsites-groups.php:1672
-#: includes/bpgsites-widgets.php:42 includes/bpgsites-widgets.php:49
-#: includes/bpgsites-widgets.php:143
-msgid "Group Sites"
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:47
-#: assets/templates/twentysixteen/index.php:55
-msgid "All %1$s <span>%2$s</span>"
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:84
-#: assets/templates/twentysixteen/index.php:92
-msgid "Order By:"
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:86
-#: assets/templates/twentysixteen/index.php:94
-msgid "Last Active"
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:87
-#: assets/templates/twentysixteen/index.php:95
-msgid "Newest"
-msgstr ""
-
-#: assets/templates/bpgsites/index.php:88
-#: assets/templates/twentysixteen/index.php:96
-msgid "Alphabetical"
-msgstr ""
-
-#: includes/bp-bpgsites-component.php:95
-msgid "Search %s..."
-msgstr ""
-
-#: includes/bpgsites-activity.php:203
-msgid "Posted in: %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:234
-msgid "BuddyPress Comment Group"
-msgstr ""
-
-#: includes/bpgsites-activity.php:272
-msgid "This comment is a reply. It appears in the same group as the comment it is in reply to. If there is a deeper thread of replies, then the original comment determines the group in which it appears."
-msgstr ""
-
-#: includes/bpgsites-activity.php:279
-msgid "This comment appears in the group %1$s."
-msgstr ""
-
-#: includes/bpgsites-activity.php:337 includes/bpgsites-activity.php:371
-msgid "You are not allowed to edit comments on this post."
-msgstr ""
-
-#: includes/bpgsites-activity.php:488
-msgid "Anonymous"
-msgstr ""
-
-#: includes/bpgsites-activity.php:495 includes/bpgsites-activity.php:2652
-msgid "post"
-msgstr ""
-
-#: includes/bpgsites-activity.php:506
-msgid "%1$s left a %2$s on a %3$s %4$s in the group %5$s:"
-msgstr ""
-
-#: includes/bpgsites-activity.php:508
-msgid "comment"
-msgstr ""
-
-#: includes/bpgsites-activity.php:618
-msgid "Comments in %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:852
-msgid "Create an account to reply"
-msgstr ""
-
-#: includes/bpgsites-activity.php:855
-msgid "Login to reply"
-msgstr ""
-
-#: includes/bpgsites-activity.php:919
-msgid "Join group to reply"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1021 includes/bpgsites-activity.php:1072
-msgid "Create an account to leave a comment"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1024 includes/bpgsites-activity.php:1074
-msgid "Login to leave a comment"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1031 includes/bpgsites-activity.php:1046
-msgid "<a href=\"%1$s\">%2$s</a>"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1040
-msgid "Join a group to leave a comment"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1084
-msgid "Join a group to leave a comment on %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1329
-msgid "Groups reading this %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1330 includes/bpgsites-blogs.php:262
-msgid "site"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1387 includes/bpgsites-activity.php:1743
-#: includes/bpgsites-activity.php:1975
-msgid "My Groups"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1422 includes/bpgsites-activity.php:1759
-#: includes/bpgsites-activity.php:2006
-msgid "Linked Groups"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1457 includes/bpgsites-activity.php:1775
-msgid "Public Groups"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1489
-msgid "Group Home Page"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1584
-msgid "Filter comments by group"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1714
-msgid "Show all groups"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1727
-msgid "Showcase Groups"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1785
-msgid "Filter"
-msgstr ""
-
-#: includes/bpgsites-activity.php:1962
-msgid "Post in"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2407
-msgid "All Recent Activity in your %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2418
-msgid "Recent Activity in Public %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2461
-msgid "Friends Activity in your %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2550
-msgid "Recent Comments in this %s"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2551 includes/bpgsites-admin.php:616
-#: includes/bpgsites-groups.php:183 includes/bpgsites-groups.php:501
-msgid "Group Site"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2689
-msgid " &amp; "
-msgstr ""
-
-#: includes/bpgsites-activity.php:2720
-msgid "%1$s updated a %2$s %3$s in the group %4$s:"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2731
-msgid "%1$s wrote a new %2$s %3$s in the group %4$s:"
-msgstr ""
-
-#: includes/bpgsites-activity.php:2772
-msgid "Group Site Posts"
-msgstr ""
-
-#: includes/bpgsites-admin.php:154 includes/bpgsites-admin.php:155
+#. Plugin Name of the plugin
 msgid "BP Group Sites"
 msgstr ""
 
-#: includes/bpgsites-admin.php:319
-msgid "You must supply an option to option_exists()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:342
-msgid "You must supply an option to option_get()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:364
-msgid "You must supply an option to option_set()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:369
-msgid "You must supply the option as a string to option_set()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:390
-msgid "You must supply an option to option_delete()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:420
-msgid "You do not have permission to access this page."
-msgstr ""
-
-#: includes/bpgsites-admin.php:425
-msgid "Options saved."
-msgstr ""
-
-#: includes/bpgsites-admin.php:482 includes/bpgsites-admin.php:495
-msgid "BP Group Sites Settings"
-msgstr ""
-
-#: includes/bpgsites-admin.php:497
-msgid "Configure how BP Group Sites behaves."
-msgstr ""
-
-#: includes/bpgsites-admin.php:503
-msgid "Global Options"
-msgstr ""
-
-#: includes/bpgsites-admin.php:508
-msgid "Should comments in public groups be visible to readers who are not members of those groups?"
-msgstr ""
-
-#: includes/bpgsites-admin.php:518
-msgid "Naming Options"
-msgstr ""
-
-#: includes/bpgsites-admin.php:523
-msgid "Enable name changes?"
-msgstr ""
-
-#: includes/bpgsites-admin.php:528
-msgid "Component Title"
-msgstr ""
-
-#: includes/bpgsites-admin.php:533
-msgid "Singular name for a Group Site"
-msgstr ""
-
-#: includes/bpgsites-admin.php:538
-msgid "Plural name for Group Sites"
-msgstr ""
-
-#: includes/bpgsites-admin.php:543
-msgid "Visit Group Site button text"
-msgstr ""
-
-#: includes/bpgsites-admin.php:556
-msgid "Developer Testing"
-msgstr ""
-
-#: includes/bpgsites-admin.php:561
-msgid "Debug"
-msgstr ""
-
-#: includes/bpgsites-admin.php:564
-msgid "Check this to trigger do_debug() . "
-msgstr ""
-
-#: includes/bpgsites-admin.php:582
-msgid "Save Changes"
-msgstr ""
-
-#: includes/bpgsites-admin.php:622
-msgid "Visit Group Site"
-msgstr ""
-
-#: includes/bpgsites-admin.php:843
-msgid "You must supply an option to bpgsites_option_wpms_exists()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:870
-msgid "You must supply an option to bpgsites_site_option_get()"
-msgstr ""
-
-#: includes/bpgsites-admin.php:893
-msgid "You must supply an option to bpgsites_site_option_set()"
-msgstr ""
-
-#: includes/bpgsites-blogs.php:265
-msgid "sites"
-msgstr ""
-
-#: includes/bpgsites-blogs.php:269
-msgid "Viewing %1$s %2$s to %3$s (of %4$s %5$s)"
-msgstr ""
-
-#: includes/bpgsites-blogs.php:441
-msgid "Remove"
-msgstr ""
-
-#: includes/bpgsites-blogs.php:443
-msgid "Add"
-msgstr ""
-
-#: includes/bpgsites-groups.php:195
-msgid "%s successfully added to Group"
-msgstr ""
-
-#: includes/bpgsites-groups.php:206
-msgid "%s successfully removed from Group"
-msgstr ""
-
-#: includes/bpgsites-groups.php:228
-msgid "Group successfully invited"
-msgstr ""
-
-#: includes/bpgsites-groups.php:233
-msgid "Something went wrong - group invitation not sent."
-msgstr ""
-
-#: includes/bpgsites-groups.php:246
-msgid "The invitation has been accepted"
-msgstr ""
-
-#: includes/bpgsites-groups.php:257
-msgid "The invitation has been declined"
-msgstr ""
-
-#: includes/bpgsites-groups.php:275
-msgid "Your group is no longer reading \"%1$s\" with %2$s"
-msgstr ""
-
-#: includes/bpgsites-groups.php:493
-msgid "You are receiving this message because you are an administrator of the group \"%1$s\""
-msgstr ""
-
-#: includes/bpgsites-groups.php:494
-msgid "Your group has been invited to read the %2$s \"%3$s\" with the group \"%4$s\". To accept or decline the invitation, click the link below to visit the %5$s admin page for your group."
-msgstr ""
-
-#: includes/bpgsites-groups.php:510
-msgid "An invitation to read \"%1$s\" with the group \"%2$s\""
-msgstr ""
-
-#: includes/bpgsites-groups.php:767
-msgid "BP Group Sites Admin Screen"
-msgstr ""
-
-#: includes/bpgsites-groups.php:828
-msgid "Invitations to read with other groups"
-msgstr ""
-
-#: includes/bpgsites-groups.php:853
-msgid "Read \"%1$s\" with \"%2$s\""
-msgstr ""
-
-#: includes/bpgsites-groups.php:861
-msgid "Accept"
-msgstr ""
-
-#: includes/bpgsites-groups.php:862
-msgid "Decline"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1257
-msgid "Read with other groups"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1303
-msgid "Reading with"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1315
-msgid "Stop"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1332
-msgid "Invite to read"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1335
-msgid "Find a group to invite"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1338
-msgid "Send invitation"
-msgstr ""
-
-#: includes/bpgsites-groups.php:1699
-msgid "To make this group a showcase group, make sure that it is set to \"Private\" above, then check the box below. The effect will be that the comments left by members of this group will always appear to readers. Only other members of this group will be able to reply to those comments."
-msgstr ""
-
-#: includes/bpgsites-groups.php:1702
-msgid "Make this group a showcase group"
-msgstr ""
-
-#: includes/bpgsites-widgets.php:41 includes/bpgsites-widgets.php:142
-msgid "List of %s"
-msgstr ""
-
-#: includes/bpgsites-widgets.php:48
-msgid "Use this widget to show a list of %s."
-msgstr ""
-
-#: includes/bpgsites-widgets.php:157
-msgid "Title:"
-msgstr ""
-
-#: includes/bpgsites-widgets.php:161
-msgid "Max number to show:"
-msgstr ""
-#. Plugin Name of the plugin/theme
-msgid "BP Group Sites"
-msgstr ""
-
-#. Plugin URI of the plugin/theme
+#. Plugin URI of the plugin
 msgid "https://github.com/christianwach/bp-group-sites"
 msgstr ""
 
-#. Description of the plugin/theme
+#. Description of the plugin
 msgid "Creates many-to-many relationships between BuddyPress Groups and WordPress Sites."
 msgstr ""
 
-#. Author of the plugin/theme
+#. Author of the plugin
 msgid "Christian Wach"
 msgstr ""
 
-#. Author URI of the plugin/theme
-msgid "http://haystack.co.uk"
+#. Author URI of the plugin
+msgid "https://haystack.co.uk"
+msgstr ""
+
+msgid "Sorry, there were no sites found."
+msgstr ""
+
+#. translators: %s: The plural name for Group Sites.
+msgid "%s Directory"
+msgstr ""
+
+msgid "Group Sites"
+msgstr ""
+
+#. translators: 1: The plural name for Group Sites, 2: The number of Group Sites.
+#. translators: %s: The plural name for Group Sites.
+msgid "All %1$s <span>%2$s</span>"
+msgstr ""
+
+msgid "Order By:"
+msgstr ""
+
+msgid "Last Active"
+msgstr ""
+
+msgid "Newest"
+msgstr ""
+
+msgid "Alphabetical"
+msgstr ""
+
+#. translators: %s: The plural name for Group Sites.
+msgid "Search %s..."
+msgstr ""
+
+#. translators: %s The link to the Group.
+msgid "Posted in: %s"
+msgstr ""
+
+msgid "BuddyPress Comment Group"
+msgstr ""
+
+msgid "This comment is a reply. It appears in the same group as the comment it is in reply to. If there is a deeper thread of replies, then the original comment determines the group in which it appears."
+msgstr ""
+
+#. translators: %s The name of the Group.
+msgid "This comment appears in the group %s."
+msgstr ""
+
+msgid "You are not allowed to edit comments on this post."
+msgstr ""
+
+msgid "Anonymous"
+msgstr ""
+
+msgid "post"
+msgstr ""
+
+#. translators: 1: The User link, 2: The link to the comment, 3: The activity name, 4: The link to the post, 5: The link to the group.
+msgid "%1$s left a %2$s on a %3$s %4$s in the group %5$s:"
+msgstr ""
+
+msgid "comment"
+msgstr ""
+
+#. translators: %s: The plural name for Group Sites.
+msgid "Comments in %s"
+msgstr ""
+
+msgid "Create an account to reply"
+msgstr ""
+
+msgid "Login to reply"
+msgstr ""
+
+msgid "Join group to reply"
+msgstr ""
+
+msgid "Create an account to leave a comment"
+msgstr ""
+
+msgid "Login to leave a comment"
+msgstr ""
+
+#. translators: 1: The URL, 2: The anchor text.
+msgid "<a href=\"%1$s\">%2$s</a>"
+msgstr ""
+
+msgid "Join a group to leave a comment"
+msgstr ""
+
+#. translators: %s: The paragraph text.
+msgid "Join a group to leave a comment on %s"
+msgstr ""
+
+#. translators: %s: The singular name of a Group Site.
+msgid "Groups reading this %s"
+msgstr ""
+
+msgid "site"
+msgstr ""
+
+msgid "My Groups"
+msgstr ""
+
+msgid "Linked Groups"
+msgstr ""
+
+msgid "Public Groups"
+msgstr ""
+
+msgid "Group Home Page"
+msgstr ""
+
+msgid "Filter comments by group"
+msgstr ""
+
+msgid "Show all groups"
+msgstr ""
+
+msgid "Showcase Groups"
+msgstr ""
+
+msgid "Filter"
+msgstr ""
+
+msgid "Post in"
+msgstr ""
+
+#. translators: %s: The plural name of Group Sites.
+msgid "All Recent Activity in your %s"
+msgstr ""
+
+#. translators: %s: The plural name of Group Sites.
+msgid "Recent Activity in Public %s"
+msgstr ""
+
+#. translators: %s: The plural name of Group Sites.
+msgid "Friends Activity in your %s"
+msgstr ""
+
+#. translators: %s: The singular name of a Group Site.
+msgid "Recent Comments in this %s"
+msgstr ""
+
+msgid "Group Site"
+msgstr ""
+
+msgid "Group Site Posts"
+msgstr ""
+
+msgid "You must supply an option to option_exists()"
+msgstr ""
+
+msgid "You must supply an option to option_get()"
+msgstr ""
+
+msgid "You must supply an option to option_set()"
+msgstr ""
+
+msgid "You must supply the option as a string to option_set()"
+msgstr ""
+
+msgid "You must supply an option to option_delete()"
+msgstr ""
+
+msgid "You do not have permission to access this page."
+msgstr ""
+
+msgid "Options saved."
+msgstr ""
+
+msgid "BP Group Sites Settings"
+msgstr ""
+
+msgid "Configure how BP Group Sites behaves."
+msgstr ""
+
+msgid "Global Options"
+msgstr ""
+
+msgid "Should comments in public groups be visible to readers who are not members of those groups?"
+msgstr ""
+
+msgid "Naming Options"
+msgstr ""
+
+msgid "Enable name changes?"
+msgstr ""
+
+msgid "Component Title"
+msgstr ""
+
+msgid "Singular name for a Group Site"
+msgstr ""
+
+msgid "Plural name for Group Sites"
+msgstr ""
+
+msgid "Visit Group Site button text"
+msgstr ""
+
+msgid "Developer Testing"
+msgstr ""
+
+msgid "Debug"
+msgstr ""
+
+msgid "Check this to trigger do_debug() . "
+msgstr ""
+
+msgid "Save Changes"
+msgstr ""
+
+msgid "Visit Group Site"
+msgstr ""
+
+msgid "You must supply an option to bpgsites_option_wpms_exists()"
+msgstr ""
+
+msgid "You must supply an option to bpgsites_site_option_get()"
+msgstr ""
+
+msgid "You must supply an option to bpgsites_site_option_set()"
+msgstr ""
+
+msgid "sites"
+msgstr ""
+
+#. translators: 1: The singular name for Group Sites, 2: Starting page number, 3: Ending page number, 4: Total number of pages, 5: The plural name for Group Sites.
+msgid "Viewing %1$s %2$s to %3$s (of %4$s %5$s)"
+msgstr ""
+
+msgid "Remove"
+msgstr ""
+
+msgid "Add"
+msgstr ""
+
+#. translators: %s: The singular name for Group Sites.
+msgid "%s successfully added to Group"
+msgstr ""
+
+#. translators: %s: The singular name for Group Sites.
+msgid "%s successfully removed from Group"
+msgstr ""
+
+msgid "Group successfully invited"
+msgstr ""
+
+msgid "Something went wrong - group invitation not sent."
+msgstr ""
+
+msgid "The invitation has been accepted"
+msgstr ""
+
+msgid "The invitation has been declined"
+msgstr ""
+
+#. translators: 1: The name of the site, 2: The name of the Group.
+msgid "Your group is no longer reading \"%1$s\" with %2$s"
+msgstr ""
+
+#. translators: 1: The name of the invited group.
+msgid "You are receiving this message because you are an administrator of the group \"%1$s\""
+msgstr ""
+
+#. translators: 2: The singular name for Group Sites, 3: The name of the site, 4: The name of the inviting group, 5: The plural name for Group Sites.
+msgid "Your group has been invited to read the %2$s \"%3$s\" with the group \"%4$s\". To accept or decline the invitation, click the link below to visit the %5$s admin page for your group."
+msgstr ""
+
+#. translators: 1: The blog name, 2: The name of the inviting group.
+msgid "An invitation to read \"%1$s\" with the group \"%2$s\""
+msgstr ""
+
+msgid "BP Group Sites Admin Screen"
+msgstr ""
+
+msgid "Invitations to read with other groups"
+msgstr ""
+
+#. translators: 1: The name of the blog, 2: The name of the inviting group.
+msgid "Read \"%1$s\" with \"%2$s\""
+msgstr ""
+
+msgid "Accept"
+msgstr ""
+
+msgid "Decline"
+msgstr ""
+
+msgid "Read with other groups"
+msgstr ""
+
+msgid "Reading with"
+msgstr ""
+
+msgid "Stop"
+msgstr ""
+
+msgid "Invite to read"
+msgstr ""
+
+msgid "Find a group to invite"
+msgstr ""
+
+msgid "Send invitation"
+msgstr ""
+
+msgid "To make this group a showcase group, make sure that it is set to \"Private\" above, then check the box below. The effect will be that the comments left by members of this group will always appear to readers. Only other members of this group will be able to reply to those comments."
+msgstr ""
+
+msgid "Make this group a showcase group"
+msgstr ""
+
+#. translators: %s: The plural name of Group Sites.
+msgid "List of %s"
+msgstr ""
+
+#. translators: %s: The plural name of Group Sites.
+msgid "Use this widget to show a list of %s."
+msgstr ""
+
+msgid "Title:"
+msgstr ""
+
+msgid "Max number to show:"
 msgstr ""
